--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 </head>
 <body class="bg-gray-50 font-sans text-black">
   <nav class="bg-black text-white p-4 shadow-md fixed top-0 left-0 w-full z-50">
-    <div class="container mx-auto flex justify-between items-center">
+    <div class="container mx-auto flex justify-between items-center px-80">
       <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
-      <ul class="flex space-x-6">
+      <ul class="flex space-x-5">
         <li><a href="pages/" class="hover:text-yellow-100">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
         <li><a href="#contact" class="hover:text-yellow-100">Contact</a></li>
@@ -43,29 +43,53 @@
       <div class="flex flex-col gap-10 items-center text-center">
         <div class="w-full max-w-2xl">
           <h4 class="text-2xl font-semibold text-blue-900 mb-4">Experience</h4>
-          <p class="font-medium">Data Analyst (VFX) - 2022-Present</p>
-          <ul class="list-disc list-inside mb-4 flex flex-col items-center">
-            <li class="text-left w-full max-w-xl">Optimized SQL queries, cutting render delays by 30%.</li>
-            <li class="text-left w-full max-w-xl">Developed Tableau/Power BI dashboards for performance tracking.</li>
-            <li class="text-left w-full max-w-xl">Conducted A/B tests with Python (pandas, numpy).</li>
-          </ul>
-          <p class="font-medium">PMO Analyst | Data Analyst, Cognizant - 2014-2020</p>
-          <ul class="list-disc list-inside flex flex-col items-center">
-            <li class="text-left w-full max-w-xl">Enhanced Healthnet queries with SQL, reducing times by 20%.</li>
-            <li class="text-left w-full max-w-xl">Built Python tools for patient insights.</li>
-            <li class="text-left w-full max-w-xl">Ensured 90% IT uptime.</li>
-          </ul>
+          <p class="font-large underline">Data Analyst</p>
+          <p class="font-medium">SOHO VFX - 2022-2025</p>
+          <div class="mb-4 flex flex-col items-center">
+            <p class="text-center w-full max-w-xl">Optimized SQL queries, cutting render delays by 30%.</p>
+            <p class="text-center w-full max-w-xl">Developed Tableau/Power BI dashboards for performance tracking.</p>
+            <p class="text-center w-full max-w-xl">Conducted A/B tests with Python (pandas, numpy).</p>
+          </div>
+          <p class="font-large underline">PMO Analyst | Data Analyst</p>
+          <p class="font-medium">Cognizant - 2014-2019</p>
+          <div class="flex flex-col items-center">
+            <p class="text-center w-full max-w-xl">Enhanced Healthnet queries with SQL, reducing times by 20%.</p>
+            <p class="text-center w-full max-w-xl">Built Python tools for patient insights.</p>
+            <p class="text-center w-full max-w-xl">Ensured 90% IT uptime.</p>
+          </div>
         </div>
         <div class="w-full max-w-2xl">
           <h4 class="text-2xl font-semibold text-blue-900 mb-4">Education & Certifications</h4>
           <p class="font-medium">Master's Degree, University of West London (2019-20)</p>
           <p class="font-medium">Bachelor of Engineering, VTU (2014)</p>
-          <ul class="list-disc list-inside mt-4 flex flex-col items-center">
-            <li class="text-left w-full max-w-xl">AWS Certified Solutions Architect - Associate</li>
-            <li class="text-left w-full max-w-xl">Microsoft Certified: Power BI Data Analyst</li>
-            <li class="text-left w-full max-w-xl">Fundamentals of AI by IBM</li>
-            <li class="text-left w-full max-w-xl">Cognizant: Python, Unix/Linux, SQL</li>
-          </ul>
+          <div class="mt-4 flex flex-col items-center">
+            <p class="text-center w-full max-w-xl">AWS Certified Solutions Architect - Associate</p>
+            <p class="text-center w-full max-w-xl">Tableau Certified Data Analyst</p>
+            <p class="text-center w-full max-w-xl">Fundamentals of AI by IBM</p>
+            <p class="text-center w-full max-w-xl">Google Data Analytics Professional Certificate</p>
+          </div>
+        </div>
+        <div class="w-full max-w-2xl mt-8">
+          <h4 class="text-2xl font-semibold text-blue-900 mb-4">Skills</h4>
+            <ul class="text-black text-base text-center">
+              <li class="mb-4">
+                <div class="font-bold">Programming Languages:</div>
+                <div>Python, Shellscripting, and R.</div>
+              </li>
+              <li class="mb-4">
+                <div class="font-bold">Applications/tools:</div>
+                <div>Microsoft Office Suite, Tableau, Power BI, Excel, PostgreSQL, MySQL, ServiceNow, AD.</div>
+              </li>
+              <li class="mb-4">
+                <div class="font-bold">Others :</div>
+                <div>Git/GitHub, T-SQL, VMWare, numpy, pandas, matplotlib, Looker Studio, IBM Cognos Analytics, Knowledge in Amazon RDS, AWS, Salesforce, SAP, and Web services types of applications.</div>
+              </li>
+              <li>
+                <div class="font-bold">OS:</div>
+                <div>Linux (Solaris 11, Redhat Linux), Mac, Windows.</div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
@@ -75,7 +99,7 @@
     <div class="container mx-auto px-6 text-center">
       <img src="assets/img/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-40 h-40 object-cover mb-8 border-4 border-gray-700">
       <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
-      <p class="text-lg mb-6">Ready to collaborate? Connect with me!</p>
+      <p class="text-lg mb-6"> Connect with me!</p>
       <div class="flex justify-center space-x-6">
         <a href="mailto:varunkammanni@gmail.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
         <a href="https://www.linkedin.com/in/varunkammanni/" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">LinkedIn</a>
