Update Project page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -13,11 +13,11 @@
     }
   </style>
 </head>
-<body class="bg-gray-50 font-sans text-gray-800">
+<body class="bg-gray-50 font-sans text-black">
   <nav class="bg-black text-white p-4 shadow-md fixed top-0 left-0 w-full z-50">
-    <div class="container mx-auto flex justify-between items-center">
+    <div class="container mx-auto flex justify-between items-center px-80">
       <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
-      <ul class="flex space-x-6">
+      <ul class="flex space-x-4">
         <li><a href="/" class="hover:text-yellow-300">Home</a></li>
         <li><a href="projects.html" class="hover:text-yellow-300">Projects</a></li>
         <li><a href="#contact" class="hover:text-yellow-300">Contact</a></li>
