--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <nav class="bg-black text-white p-4 shadow-md fixed top-0 left-0 w-full z-50">
     <div class="container mx-auto flex justify-between items-center px-80">
       <a href="/" class="text-2xl font-bold hover:text-yellow-300 transition-colors">Varun Kammanni</a>
-      <ul class="flex space-x-5">
+      <ul class="flex space-x-4">
         <li><a href="pages/" class="hover:text-yellow-100">Home</a></li>
         <li><a href="pages/projects.html" class="hover:text-yellow-300">Projects</a></li>
         <li><a href="#contact" class="hover:text-yellow-100">Contact</a></li>
@@ -98,7 +98,7 @@
   <section id="contact" class="py-20 bg-teal-700 text-black shadow-xl rounded-lg mt-8 mb-8">
     <div class="container mx-auto px-6 text-center">
       <img src="assets/img/placeholder.png" alt="Varun KV" class="rounded-lg shadow-xl mx-auto w-40 h-40 object-cover mb-8 border-4 border-gray-700">
-      <h3 class="text-4xl font-bold mb-8">Get in Touch</h3>
+      <h3 class="text-lg font-bold mb-8">Get in Touch</h3>
       <p class="text-lg mb-6"> Connect with me!</p>
       <div class="flex justify-center space-x-6">
         <a href="mailto:varunkammanni@gmail.com" class="bg-yellow-400 text-blue-900 px-6 py-3 rounded-lg font-semibold hover:bg-yellow-500 transition">Email</a>
