--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
     <div class="fixed inset-0 -z-10 gradient-bg"></div>
 
     <!-- Header & Navigation -->
-    <header id="header" class="fixed top-0 left-0 right-0 z-40 transition-all duration-300">
+    <header id="header" class="fixed top-0 left-0 right-0 z-40 transition-all duration-300 bg-gray-800 text-white">
         <div class="container mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
-                <a href="#home" class="text-xl font-bold font-['Poppins'] tracking-tight">Varun Kammanni</a>
+                <a href="#home" class="text-xl font-bold font-['Poppins'] tracking-tight text-white">Varun Kammanni</a>
                 <nav class="hidden md:flex items-center space-x-6 lg:space-x-8">
-                    <a href="#projects" class="nav-link">Projects</a>
-                    <a href="#experience" class="nav-link">Experience</a>
-                    <a href="#education" class="nav-link">Education</a>
-                    <a href="#skills" class="nav-link">Skills</a>
-                    <a href="#contact" class="nav-link">Contact</a>
+                    <a href="#projects" class="nav-link text-white">Projects</a>
+                    <a href="#experience" class="nav-link text-white">Experience</a>
+                    <a href="#education" class="nav-link text-white">Education</a>
+                    <a href="#skills" class="nav-link text-white">Skills</a>
+                    <a href="#contact" class="nav-link text-white">Contact</a>
                 </nav>
                 <div class="flex items-center space-x-4">
-                    <button id="theme-toggle" class="w-10 h-10 rounded-lg flex items-center justify-center text-gray-600 dark:text-gray-300 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">
+                    <button id="theme-toggle" class="w-10 h-10 rounded-lg flex items-center justify-center text-gray-200 hover:bg-gray-800 transition-colors">
                         <i id="theme-icon-sun" class="fas fa-sun"></i>
                         <i id="theme-icon-moon" class="fas fa-moon hidden"></i>
                     </button>
-                    <button id="mobile-menu-button" class="md:hidden w-10 h-10 flex items-center justify-center text-gray-600 dark:text-gray-300">
+                    <button id="mobile-menu-button" class="md:hidden w-10 h-10 flex items-center justify-center text-gray-200">
                         <i class="fas fa-bars text-xl"></i>
                     </button>
                 </div>
@@ -115,7 +115,8 @@
                 <div class="animated-element">
                     <h1 class="text-5xl md:text-7xl font-bold tracking-tighter mb-4">Varun Kammanni</h1>
                     <p class="text-lg md:text-xl text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">
-                        Data Analyst | Turning Data into Actionable Insights
+                        <span class="text-2xl md:text-2xl font-bold">Data Analyst</span><br/>
+                        <span class="block">Turning Data into Actionable Insights</span>
                     </p>
                     <div class="mt-8 flex justify-center space-x-6">
                         <a href="https://www.linkedin.com/in/varunkammanni/" target="_blank" class="social-icon"><i class="fab fa-linkedin fa-2x"></i></a>
@@ -124,7 +125,7 @@
                     </div>
                 </div>
                 
-                <div class="animated-element mt-12 max-w-3xl mx-auto text-center leading-relaxed text-gray-700 dark:text-gray-300">
+                <div class="animated-element mt-8 max-w-3xl mx-auto text-center leading-relaxed text-gray-700 dark:text-gray-300">
                      <p>
                         I am a detail-oriented analyst with a passion for uncovering the stories hidden within data. My expertise lies in cleaning, transforming, and visualizing complex datasets to drive data-informed decision-making. With a strong background in SQL, Python, and data visualization tools like Tableau and Power BI, I excel at turning raw numbers into clear, actionable insights. I am committed to leveraging data to solve business problems and am always eager to learn new techniques and technologies in the ever-evolving field of data analytics.
                     </p>
@@ -330,8 +331,8 @@
             const header = document.getElementById('header');
             const handleHeaderScroll = () => {
                 const isScrolled = window.scrollY > 10;
-                header.classList.toggle('bg-white/80', isScrolled);
-                header.classList.toggle('dark:bg-gray-900/80', isScrolled);
+                header.classList.add('bg-black', 'text-white');
+                header.classList.remove('bg-white/80', 'dark:bg-gray-900/80');
                 header.classList.toggle('backdrop-blur-sm', isScrolled);
                 header.classList.toggle('shadow-sm', isScrolled);
             };
@@ -383,11 +384,11 @@
             // --- New Project Section Logic ---
             const projectsData = {
                 tableau: [
-                    { title: "Retail Sales - USA", description: "An in-depth analysis of retail sales data across the United States, identifying trends, top-performing products, and regional patterns.", link: "https://public.tableau.com/views/Section_6_Retail_Sales_USA_17519498877730/Dashboard1?:language=en-GB&:_RPC=true&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=800&auto=format&fit=crop", tags: ["Sales Analytics", "Dashboard", "USA"] },
-                    { title: "World Demographics", description: "An animated dashboard showcasing the change in world demographics over time, providing insights into population growth and shifts.", link: "https://public.tableau.com/views/Section_5_World_Demo/Animation?:language=en-GB&:_RPC=true&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1611068813580-b2717556d183?q=80&w=800&auto=format&fit=crop", tags: ["Animation", "Population", "Global"] },
-                    { title: "UK Bank Customers", description: "A story-driven dashboard analyzing the customer base of a UK bank, highlighting key segments and behaviors.", link: "https://public.tableau.com/views/UKBankCustomers_17519326212990/Story1?:language=en-GB&:_RPC=true&publish=yes&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1591696205602-2f950c41744a?q=80&w=800&auto=format&fit=crop", tags: ["Storytelling", "Finance", "UK"] },
-                    { title: "Clothing Industry - AUS", description: "A comprehensive presentation on the Australian clothing industry, focusing on market trends, sales, and consumer data.", link: "https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&:_RPC=true&publish=yes&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1638368925520-74e2f992c905?q=80&w=800&auto=format&fit=crop", tags: ["Retail", "Fashion", "Australia"] },
-                    { title: "Coal Mining Industry", description: "A detailed report on the coal mining industry, visualizing production, employment, and economic impact data.", link: "https://public.tableau.com/views/Section_3_Coal_Mining_V3/Report?:language=en-GB&:_RPC=true&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1604882355152-1b19a16f3434?q=80&w=800&auto=format&fit=crop", tags: ["Industry Report", "Energy", "Data Viz"] }
+                    { title: "Retail Sales - USA", description: "An in-depth analysis of retail sales data across the United States, identifying trends, top-performing products, and regional patterns.", link: "https://public.tableau.com/views/Section_6_Retail_Sales_USA_17519498877730/Dashboard1?:language=en-GB&:embed=y&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=800&auto=format&fit=crop", tags: ["Sales Analytics", "Dashboard", "USA"] },
+                    { title: "World Demographics", description: "An animated dashboard showcasing the change in world demographics over time, providing insights into population growth and shifts.", link: "https://public.tableau.com/views/Section_5_World_Demo/Animation?:language=en-GB&:embed=y&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1611068813580-b2717556d183?q=80&w=800&auto=format&fit=crop", tags: ["Animation", "Population", "Global"] },
+                    { title: "UK Bank Customers", description: "A story-driven dashboard analyzing the customer base of a UK bank, highlighting key segments and behaviors.", link: "https://public.tableau.com/views/UKBankCustomers_17519326212990/Story1?:language=en-GB&:embed=y&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1591696205602-2f950c41744a?q=80&w=800&auto=format&fit=crop", tags: ["Storytelling", "Finance", "UK"] },
+                    { title: "Clothing Industry - AUS", description: "A comprehensive presentation on the Australian clothing industry, focusing on market trends, sales, and consumer data.", link: "https://public.tableau.com/views/Section_4_Clothes_Industry_Australia/FinalPresentation?:language=en-GB&:embed=y&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1638368925520-74e2f992c905?q=80&w=800&auto=format&fit=crop", tags: ["Retail", "Fashion", "Australia"] },
+                    { title: "Coal Mining Industry", description: "A detailed report on the coal mining industry, visualizing production, employment, and economic impact data.", link: "https://public.tableau.com/views/Section_3_Coal_Mining_V3/Report?:language=en-GB&:embed=y&:display_count=n&:origin=viz_share_link", image: "https://images.unsplash.com/photo-1604882355152-1b19a16f3434?q=80&w=800&auto=format&fit=crop", tags: ["Industry Report", "Energy", "Data Viz"] }
                 ],
                 sql: [{ title: "Work In Progress", description: "Advanced SQL projects are currently under development. Please check back soon for updates.", image: "https://images.unsplash.com/photo-1593421534237-79116a35079a?q=80&w=800&auto=format&fit=crop", tags: ["Coming Soon"] }],
                 python: [{ title: "Work In Progress", description: "Python-based data analysis and machine learning projects are being prepared. Please check back soon.", image: "https://images.unsplash.com/photo-1614741118887-7a4ee193a5fa?q=80&w=800&auto=format&fit=crop", tags: ["Coming Soon"] }],
