--- a/index.html
+++ b/index.html
@@ -212,11 +212,11 @@
                 Companies & Projects I've Contributed To
             </h3>
             <div class="max-w-5xl mx-auto flex flex-wrap justify-center items-center gap-x-12 sm:gap-x-16 gap-y-8">
-                <img src="assets/img/B&W/Cognizant.png" alt="Cognizant Logo" class="client-logo">
-                <img src="assets/img/B&W/Soho.png" alt="SOHO VFX Logo" class="client-logo">
+                <img src="assets/img/B&W/Cognizant.png" alt="Cognizant Logo" class="client-logo" style="transform: scale(1.2);">
+                <img src="assets/img/B&W/Soho.png" alt="SOHO VFX Logo" class="client-logo" style="transform: scale(1.2);">
                 <img src="assets/img/B&W/Allegis.png" alt="Allegis Group Logo" class="client-logo">
-                <img src="assets/img/B&W/Marvel.png" alt="Marvel Logo" class="client-logo">
-                <img src="assets/img/B&W/HealthNet.png" alt="Health Net Logo" class="client-logo">
+                <img src="assets/img/B&W/Marvel.png" alt="Marvel Logo" class="client-logo" style="transform: scale(1.2);">
+                <img src="assets/img/B&W/HealthNet.png" alt="Health Net Logo" class="client-logo" style="transform: scale(1.2);">
                 <img src="assets/img/B&W/REV.png" alt="REV Logo" class="client-logo dark:invert">
             </div>
         </section>
