--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             <h3 class="text-center text-sm font-bold text-slate-500 dark:text-slate-400 uppercase tracking-widest mb-10">
                 Companies & Projects I've Contributed To
             </h3>
-            <div class="max-w-5xl mx-auto flex flex-wrap justify-center items-center gap-x-12 sm:gap-x-16 gap-y-8">
+            <div class="max-w-5xl mx-auto flex flex-wrap justify-center items-center gap-x-12 sm:gap-x-22 gap-y-8">
                 <img src="assets/img/B&W/Cognizant.png" alt="Cognizant Logo" class="client-logo" style="transform: scale(1.8);">
                 <img src="assets/img/B&W/Soho.png" alt="SOHO VFX Logo" class="client-logo" style="transform: scale(1.5);">
                 <img src="assets/img/B&W/Allegis.png" alt="Allegis Group Logo" class="client-logo">
@@ -475,10 +475,10 @@
                     { name: 'MongoDB', icon: '<img src="assets/img/Tools/MongoDB.png" alt="MongoDB logo" class="w-full h-full object-contain">' }
                 ],
                 libraries: [
-                    { name: 'Pandas', icon: '<img src="assets/img/Tools/Pandas.png" alt="Pandas logo" class="w-full h-full object-contain">' },
-                    { name: 'NumPy', icon: '<img src="assets/img/Tools/NumPy.png" alt="NumPy logo" class="w-full h-full object-contain">' },
+                    { name: 'Pandas', icon: '<img src="assets/img/Tools/pandas.png" alt="Pandas logo" class="w-full h-full object-contain">' },
+                    { name: 'NumPy', icon: '<img src="assets/img/Tools/numpy.png" alt="NumPy logo" class="w-full h-full object-contain">' },
                     { name: 'Matplotlib', icon: '<img src="assets/img/Tools/Matplotlib.png" alt="Matplotlib logo" class="w-full h-full object-contain">' },
-                    { name: 'Seaborn', icon: '<img src="assets/img/Tools/Seaborn.png" alt="Seaborn logo" class="w-full h-full object-contain">' },
+                    { name: 'Seaborn', icon: '<img src="assets/img/Tools/seaborn.png" alt="Seaborn logo" class="w-full h-full object-contain">' },
                     { name: 'Beautiful Soup', icon: '<img src="assets/img/Tools/BeautifulSoup.png" alt="Beautiful Soup logo" class="w-full h-full object-contain">' },
                     { name: 'TensorFlow', icon: '<img src="assets/img/Tools/TensorFlow.png" alt="TensorFlow logo" class="w-full h-full object-contain">' },
                     { name: 'PyTorch', icon: '<img src="assets/img/Tools/PyTorch.png" alt="PyTorch logo" class="w-full h-full object-contain">' },
