--- a/index.html
+++ b/index.html
@@ -211,12 +211,13 @@
             <h3 class="text-center text-sm font-bold text-slate-500 dark:text-slate-400 uppercase tracking-widest mb-10">
                 Companies & Projects I've Contributed To
             </h3>
-            <div class="max-w-5xl mx-auto flex flex-wrap justify-center items-center gap-x-12 sm:gap-x-22 gap-y-12">
+            <div class="max-w-5xl mx-auto flex flex-wrap justify-center items-center gap-x-12 sm:gap-x-18 gap-y-10">
                 <img src="assets/img/B&W/Cognizant.png" alt="Cognizant Logo" class="client-logo" style="transform: scale(1.8);">
-                <img src="assets/img/B&W/Soho.png" alt="SOHO VFX Logo" class="client-logo" style="transform: scale(1.5);">
+                <img src="assets/img/B&W/HealthNet.png" alt="Health Net Logo" class="client-logo" style="transform: scale(1.8);">
                 <img src="assets/img/B&W/Allegis.png" alt="Allegis Group Logo" class="client-logo">
                 <img src="assets/img/B&W/Marvel.png" alt="Marvel Logo" class="client-logo" style="transform: scale(1.8);">
-                <img src="assets/img/B&W/HealthNet.png" alt="Health Net Logo" class="client-logo" style="transform: scale(1.8);">
+                <img src="assets/img/B&W/Soho.png" alt="SOHO VFX Logo" class="client-logo" style="transform: scale(1.5);">
+                <img src="assets/img/B&W/jellysmack.png" alt="Jellysmack Logo" class="client-logo" style="transform: scale(1.5);">
                 <img src="assets/img/B&W/REV.png" alt="REV Logo" class="client-logo dark:invert">
             </div>
         </section>
