--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="flex items-center justify-between h-16">
                 <!-- Left Aligned Name -->
                 <div class="flex-1">
-                     <a href="#home" class="text-xl font-bold font-['Poppins'] tracking-tight text-white">Varun Kammanni</a>
+                     <a href="#home" class="text-xl font-bold font-['Poppins'] tracking-tight text-white">VK</a>
                 </div>
                 <!-- Center Aligned Nav -->
                 <nav class="hidden md:flex items-center justify-center space-x-6 lg:space-x-8">
@@ -112,15 +112,15 @@
             <!-- Stats Block -->
             <div class="hidden lg:flex flex-col gap-8 absolute top-1/2 -translate-y-1/2 right-0">
                 <div class="stat-item text-right">
-                    <p class="text-3xl font-bold text-slate-900 dark:text-white">4+</p>
+                    <p class="text-2xl font-bold text-slate-900 dark:text-white">4+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Years of Experience</p>
                 </div>
                  <div class="stat-item text-right">
-                    <p class="text-3xl font-bold text-slate-900 dark:text-white">12+</p>
+                    <p class="text-2xl font-bold text-slate-900 dark:text-white">12+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Completed Projects</p>
                 </div>
                  <div class="stat-item text-right">
-                    <p class="text-3xl font-bold text-slate-900 dark:text-white">10K+</p>
+                    <p class="text-2xl font-bold text-slate-900 dark:text-white">10K+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Hours Worked</p>
                 </div>
             </div>
