--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <section id="home" class="min-h-screen flex flex-col items-center justify-center text-center relative">
             
             <!-- Stats Block -->
-            <div class="hidden lg:flex flex-col gap-8 absolute top-1/2 -translate-y-1/2 right-8">
+            <div class="hidden lg:flex flex-col gap-8 fixed top-1/2 -translate-y-1/2 right-5 lg:right-8 z-50">
                 <div class="stat-item text-right">
                     <p class="text-2xl font-bold text-slate-900 dark:text-white">4+</p>
                     <p class="text-xs text-slate-500 dark:text-slate-400">Years of Experience</p>
